# VRSandbox

./: .gitattributes  .gitignore  CMakeLists.txt  Utils.cmake
Code/App/: CMakeLists.txt  InputControls.ixx  main.cpp
Code/Audio/: CMakeLists.txt
Code/Audio/Private/: Audio.cpp  Buffer.cpp  Buffer.ixx  Engine.cpp  Engine.ixx  Source.cpp  Source.ixx  System.cpp  System.ixx  Types.ixx
Code/Audio/Public/: Audio.ixx
Code/DiffusionTest/: CMakeLists.txt  main.cpp
Code/Entity/: CMakeLists.txt  Entity.natvis
Code/Entity/Private/: AnimationDescription.cpp  AnimationDescription.ixx  AssetRegistry.cpp  AssetRegistry.ixx  Component.cpp  Component.ixx  Entity.cpp  EntityAllocator.cpp  EntityAllocator.ixx  EntityDef.ixx  FreeFlyCameraController.cpp  ObjectDescription.cpp  ObjectDescription.ixx  Prefab.cpp  Prefab.ixx  Registry.cpp  Scene.cpp  ScriptCommands.cpp  ScriptCommands.ixx  ScriptContext.cpp  ScriptContext.ixx  ScriptEventManager.cpp  ScriptEventManager.ixx  World.cpp  World.ixx  Zone.ixx
Code/Entity/Public/: AssetRegistry.ixx  Component.ixx  Entity.ixx  EntityAllocator.ixx  FreeFlyCameraController.cpp  FreeFlyCameraController.ixx  ObjectDescription.ixx  Prefab.ixx  Registry.ixx  Scene.fwd.ixx  Scene.ixx  World.ixx  Zone.ixx
Code/Procedural/: CMakeLists.txt
Code/Procedural/Private/: Biome.cpp  Biome.ixx  Climate.cpp  Climate.ixx  GeneratorV2.cpp  GeneratorV2.ixx  HeightMapBaker.ixx  Noise.cpp  Noise.ixx  OceanGenerator.cpp  OceanGenerator.ixx  OceanRenderer.cpp  OceanRenderer.ixx  Scattering.cpp  Scattering.ixx  TerrainChunk.ixx  TerrainCollider.cpp  TerrainCollider.ixx  TerrainGenerator.cpp  TerrainGenerator.ixx  TerrainSampler.ixx  TerrainStreamer.cpp  TerrainStreamer.ixx
Code/Procedural/Private/Diffusion/: DiffusionDebug.cpp  DiffusionDebug.ixx  GeneratorV3.cpp  GeneratorV3.ixx  InfiniteTensor.cpp  InfiniteTensor.ixx  Json.cpp  Json.ixx  Laplacian.cpp  Laplacian.ixx  ModelAssets.cpp  ModelAssets.ixx  Onnx.cpp  Onnx.ixx  Rng.cpp  Rng.ixx  Scheduler.cpp  Scheduler.ixx  SyntheticMap.cpp  SyntheticMap.ixx  Tensor.cpp  Tensor.ixx  WorldPipeline.cpp  WorldPipeline.ixx
Code/Procedural/Public/: Procedural.ixx
Code/RendererVK/: CMakeLists.txt
Code/RendererVK/Private/: Aftermath.ixx  Buffer.cpp  Buffer.ixx  CPUCullingRasterizer.cpp  CommandBuffer.cpp  CommandBuffer.ixx  ComputePipeline.cpp  ComputePipeline.ixx  DDS.ixx  Device.cpp  Device.ixx  Framebuffers.cpp  Framebuffers.ixx  GraphicsPipeline.cpp  GraphicsPipeline.ixx  Instance.cpp  Instance.ixx  Layout.ixx  Light.ixx  Mesh.cpp  MeshDataManager.cpp  MeshDataManager.ixx  ObjectContainer.cpp  ObjectContainer.ixx  OpenXRSession.cpp  OpenXRSession.ixx  Pipeline.cpp  Pipeline.ixx  PointLight.ixx  RenderNode.cpp  RenderNode.ixx  RenderObject.cpp  RenderPass.cpp  Renderer.cpp  Renderer.ixx  RendererVK.cpp  Sampler.cpp  Sampler.ixx  Settings.cpp  Settings.ixx  (+12 more)
Code/RendererVK/Private/Data/: GpuCrashTracker.cpp  GpuCrashTracker.ixx  MeshDataManager.cpp  MeshDataManager.ixx  MeshStreamer.cpp  MeshStreamer.ixx  ShaderDatabase.cpp  ShaderDatabase.ixx  StagingManager.cpp  StagingManager.ixx  TextureManager.cpp  TextureManager.ixx  TextureStreamer.cpp  TextureStreamer.ixx
Code/RendererVK/Private/Objects/: AccelerationStructure.cpp  AccelerationStructure.ixx  Allocator.cpp  Allocator.ixx  BakedWorldMap.cpp  BakedWorldMap.ixx  Buffer.cpp  Buffer.ixx  CommandBuffer.cpp  CommandBuffer.ixx  ComputePipeline.cpp  ComputePipeline.ixx  DescriptorSet.cpp  DescriptorSet.ixx  Device.cpp  Device.ixx  (+28 more)
Code/RendererVK/Public/: Buffer.ixx  CPUCullingRasterizer.ixx  Camera.ixx  CommandBuffer.ixx  Device.ixx  Framebuffers.ixx  Instance.ixx  Layout.ixx  Material.ixx  Mesh.ixx  MeshDataManager.ixx  MeshInstance.ixx  ObjectContainer.ixx  ObjectSpawner.ixx  Pipeline.ixx  PointLight.ixx  RenderNode.ixx  RenderObject.ixx  RenderPass.ixx  RendererVK.fwd.ixx  RendererVK.ixx  Sampler.ixx  Shader.ixx  StagingManager.ixx  Surface.ixx  SwapChain.ixx  Texture.ixx  Transform.ixx  VK.h
Code/Script/: CMakeLists.txt
Code/Script/Private/: Script.cpp  ScriptHost.cpp
Code/Script/Public/: Script.ixx  ScriptAPI.h  ScriptCtxMacros.h  ScriptHost.ixx
Code/Spatial/: CMakeLists.txt
Code/Spatial/Private/: CellMap.ixx  Morton.ixx  Occlusion.cpp  Occlusion.ixx  Query.cpp  RecordPool.ixx  SpatialIndex.cpp  SpatialIndex.ixx  StaticStore.ixx  Stress.cpp  Stress.ixx  Types.ixx
Code/Spatial/Public/: Spatial.ixx
Code/UI/: CMakeLists.txt
Code/UI/Private/: UI.cpp  node_editor.ixx
Code/UI/Public/: UI.fwd.ixx  UI.ixx
Dependencies/: CMakeLists.txt  Licenses.txt
Dependencies/Include/Aftermath/: GFSDK_Aftermath_Defines.h
Dependencies/Include/dds/: dds.h
Dependencies/Include/imgui/: imgui_internal.h
Dependencies/Include/vma/: vk_mem_alloc_modules_compat.h
Dependencies/Include/vulkan/: vulkan.hpp
Dependencies/Lib/: EASTL.lib  EASTLd.lib  GFSDK_Aftermath_Lib.x64.lib  GenericCodeGen.lib  GenericCodeGend.lib  MachineIndependent.lib  MachineIndependentd.lib  OSDependent.lib  OSDependentd.lib  SDL3-static.lib  SDL3-staticd.lib  SPIRV-Tools-diff.lib  SPIRV-Tools-diffd.lib  SPIRV-Tools-link.lib  SPIRV-Tools-linkd.lib  SPIRV-Tools-lint.lib  SPIRV-Tools-lintd.lib  SPIRV-Tools-opt.lib  SPIRV-Tools-optd.lib  SPIRV-Tools-reduce.lib  SPIRV-Tools-reduced.lib  SPIRV-Tools-shared.lib  SPIRV-Tools-sharedd.lib  SPIRV-Tools.lib  SPIRV-Toolsd.lib  SPIRV.lib  SPIRVd.lib  SPVRemapper.lib  SPVRemapperd.lib  assimp-vc143-mt.lib  assimp-vc143-mtd.lib  box3d.lib  box3dd.lib  dxcompiler.lib  gfx.lib  gfxd.lib  glslang-default-resource-limits.lib  glslang-default-resource-limitsd.lib  glslang.lib  glslangd.lib  (+46 more)
Dependencies/box3d/: CONTRIBUTING.md  README.md
Dependencies/box3d/docs/: foundation.md
Dependencies/box3d/samples/: main.cpp  sample.cpp  sample.h  sample_character.cpp  sample_compound.cpp  sample_continuous.cpp  sample_replay.cpp
Dependencies/box3d/src/: recording_replay.c  solver.c
Dependencies/box3d/test/: test_recording.c
VRSandbox/Code/Core/: CMakeLists.txt  TestScene.cpp  TestScene.ixx  TestWorld.cpp  TestWorld.h  TestWorld.ixx  World.cpp  World.ixx  main.cpp
(+642 files in other folders)
